--- a/paginas/home/index.css
+++ b/paginas/home/index.css
@@ -124,10 +124,9 @@ main {
     color: #42F266;
     background-color: transparent;
     border: 1.5px solid #42F266;
-    padding: 20px 200px;
     border-radius: 8px;
-    width: 200px;
-    height: 30px;
+    width: 450px;
+    height: 40px;
 }
 
 .links a:hover {
@@ -156,6 +155,26 @@ footer {
 
 footer p {
     margin-top: 20px;
+}
+
+.icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding-top: 20px;
+}
+
+.icons a {
+    color: #B9B9B9;
+    text-decoration: none;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: rgb(88, 86, 86);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Media Queries */
@@ -247,9 +266,14 @@ footer p {
         gap: 20px;
     }
 
+    .a_header {
+        font-size: 14px;
+    }
+
     .nav_header {
         flex-direction: row;
         gap: 20px;
+
     }
     .text_main h1 {
         font-size: 28px;
