--- a/paginas/projects/projects.css
+++ b/paginas/projects/projects.css
@@ -131,6 +131,26 @@ footer p {
     margin-top: 20px;
 }
 
+.icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding-top: 20px;
+}
+
+.icons a {
+    color: #B9B9B9;
+    text-decoration: none;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: rgb(88, 86, 86);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 @media (max-width: 1200px) {
     main {
         flex-direction: column;
