--- a/paginas/home/index.css
+++ b/paginas/home/index.css
@@ -35,6 +35,16 @@ header {
     gap: 30px;
 }
 
+.hamburger {
+    display: none;
+    background: none;
+    border: none;
+    color: #42F266;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+/* Nav Header */
 .nav_header {
     list-style: none;
     display: flex;
@@ -42,7 +52,6 @@ header {
     padding: 0;
     margin: 0;
 }
-
 .a_header {
     color: #42F266;
     font-weight: 400;
@@ -81,11 +90,7 @@ main {
     margin: 0;
     color: white;
 }
-.cantanhede {
-    color: green; /* Apply green color to the span element */
-  }
   
-
 .text_main p {
     margin-top: 40px;
     color: white;
@@ -215,9 +220,32 @@ footer p {
 }
 
 @media (max-width: 768px) {
-    .nav_header {
-        gap: 20px;
+    .hamburger {
+        display: block;
     }
+
+    .nav_header {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        background-color: #2b2b2be3;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        padding: 5px 0 5px 0;
+        border-top: 1px solid #42F266;
+    }
+
+    .nav_header a {
+        padding: 10px 10px;
+    }
+
+    .nav_header.active {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
 
     main {
         flex-direction: column;
@@ -260,6 +288,7 @@ footer p {
         flex-direction: row;
         align-items: center;
     }
+    
 
     .menu_header {
         flex-direction: row;
